--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sass": "^1.77.8",
     "web-vitals": "^4.2.2"
   },
-  "devDependencies": {"@testing-library/jest-dom": "^6.4.6",
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "react-scripts": "5.0.1"
